try resolve dependency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "bun scripts/test.ts"
   },
   "devDependencies": {
-    "@lobehub/lint": "latest",
+    "@lobehub/lint": "^1.23.3",
     "@octokit/rest": "^20",
     "@types/fs-extra": "^11",
     "@types/lodash-es": "^4",
